Added up and down arrows. Added support for Cardano and Doge.

--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,5 @@
 {
  "CoinMarketCapKey": "",
- "Coins": ["DIME", "BTC", "ETH"],
+ "Coins": ["DIME", "BTC", "ETH", "ADA", "DOGE"],
  "Currency": ["USD"]
 }
