Added screen rotation config option and configurable time interval.

--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,7 @@
 {
  "CoinMarketCapKey": "",
  "Coins": ["DIME", "BTC", "ETH", "ADA", "DOGE"],
- "Currency": ["USD"]
+ "Currency": ["USD"],
+ "RotateScreen": false,
+ "QueryInterval": 1800
 }
