--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
  "CoinMarketCapKey": "",
- "Coins": ["DIME", "BTC", "ETH", "ADA", "DOGE"],
+ "Coins": ["DOGE", "BTC", "ETH", "DIME", "ADA"],
  "Currency": ["USD"],
  "RotateScreen": false,
  "QueryInterval": 1200
